[gd_scene load_steps=64 format=3 uid="uid://bi41v4vt74o1v"]

[ext_resource type="Script" path="res://bulletLoadingScript.gd" id="1_4j0gb"]
[ext_resource type="Texture2D" uid="uid://bmgexc1fgjuh1" path="res://assets/RevolverLoadGifFin/zeroBullets/0 Bullets.png" id="2_41up6"]
[ext_resource type="Texture2D" uid="uid://h40c61piiyvn" path="res://assets/BlkBckgrnd.jpg" id="2_porra"]
[ext_resource type="Texture2D" uid="uid://dxyw444rb5nxb" path="res://assets/RevolverLoadGifFin/oneBullet/Spot 0.png" id="3_1lx88"]
[ext_resource type="Texture2D" uid="uid://b8rapdbyi07yr" path="res://assets/RevolverLoadGifFin/oneBullet/Spot 1.png" id="4_mwvqs"]
[ext_resource type="Texture2D" uid="uid://bsd5js58nkuf7" path="res://assets/RevolverLoadGifFin/oneBullet/Spot 2.png" id="5_ejjxp"]
[ext_resource type="Texture2D" uid="uid://dxcd2yg1c48mq" path="res://assets/RevolverLoadGifFin/oneBullet/Spot 3.png" id="6_7lv8o"]
[ext_resource type="Texture2D" uid="uid://fmuhn0n6trn1" path="res://assets/RevolverLoadGifFin/oneBullet/Spot 4.png" id="7_pleyi"]
[ext_resource type="Texture2D" uid="uid://jtvvmorgy254" path="res://assets/RevolverLoadGifFin/oneBullet/Spot 5.png" id="8_cjc3g"]
[ext_resource type="Texture2D" uid="uid://bcatcwlqp1rgu" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 0.1.png" id="9_bwx7g"]
[ext_resource type="Texture2D" uid="uid://dsjbf6cbimkkn" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 0.2.png" id="9_te5nt"]
[ext_resource type="Texture2D" uid="uid://cw2ovhmmsw6rc" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 0.3.png" id="10_71pre"]
[ext_resource type="Texture2D" uid="uid://bsy7b5haf135o" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 0.4.png" id="11_0pmfx"]
[ext_resource type="Texture2D" uid="uid://dli7au8gndl1h" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 0.5.png" id="12_rwc0a"]
[ext_resource type="Texture2D" uid="uid://68163ithumk2" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 1.2.png" id="13_34nge"]
[ext_resource type="Texture2D" uid="uid://41awmndpnydu" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 1.3.png" id="14_1bffo"]
[ext_resource type="Texture2D" uid="uid://2esil8qe2512" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 1.4.png" id="15_bi0w8"]
[ext_resource type="Texture2D" uid="uid://5tqjf44vslpy" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 1.5.png" id="16_3dmt7"]
[ext_resource type="Texture2D" uid="uid://cod3sdhvspgyc" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 2.3.png" id="17_l2ul6"]
[ext_resource type="Texture2D" uid="uid://bk6umjmu6uue1" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 2.4.png" id="18_5ksxr"]
[ext_resource type="Texture2D" uid="uid://ccwt8p7unins0" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 2.5.png" id="19_lk8sg"]
[ext_resource type="Texture2D" uid="uid://cp2stjgkvqhwm" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 3.4.png" id="20_8ga3c"]
[ext_resource type="Texture2D" uid="uid://deufka36oas8a" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 3.5.png" id="21_jfa02"]
[ext_resource type="Texture2D" uid="uid://d1ou1sx7monpt" path="res://assets/RevolverLoadGifFin/twoBullets/Spot 4.5.png" id="22_ett0u"]
[ext_resource type="Texture2D" uid="uid://bc6ba4geyvi0w" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 0.1.3.png" id="23_mg1os"]
[ext_resource type="Texture2D" uid="uid://bn0jjisp3pbvy" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 0.1.4.png" id="24_2rx0w"]
[ext_resource type="Texture2D" uid="uid://bejcsgo0cwyb" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 0.1.2.png" id="24_kh8f6"]
[ext_resource type="Texture2D" uid="uid://drldrdf5gpos0" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 0.1.5.png" id="25_ag51e"]
[ext_resource type="Texture2D" uid="uid://hdtj4aqli63q" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 0.2.3.png" id="26_vwtep"]
[ext_resource type="Texture2D" uid="uid://dbsxkhegphqd5" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 0.2.4.png" id="27_spri7"]
[ext_resource type="Texture2D" uid="uid://dio4swexgan0n" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 0.2.5.png" id="28_lulr8"]
[ext_resource type="Texture2D" uid="uid://bnh7udu6sjwuo" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 0.3.4.png" id="29_dqtpo"]
[ext_resource type="Texture2D" uid="uid://bi3vwgnoxjow2" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 0.4.5.png" id="30_107tn"]
[ext_resource type="Texture2D" uid="uid://bfte8hc8xos7k" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 1.2.3.png" id="31_joti5"]
[ext_resource type="Texture2D" uid="uid://bprmob5it0yjj" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 1.2.4.png" id="32_gs17w"]
[ext_resource type="Texture2D" uid="uid://dehjs82s5pmhm" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 1.2.5.png" id="33_5nev2"]
[ext_resource type="Texture2D" uid="uid://cmcom0ftgoo1q" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 1.3.4.png" id="34_31vxl"]
[ext_resource type="Texture2D" uid="uid://dst1hgc1xtwqd" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 1.3.5.png" id="35_g1cbd"]
[ext_resource type="Texture2D" uid="uid://brrcd1toovw2t" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 1.4.5.png" id="36_xksnd"]
[ext_resource type="Texture2D" uid="uid://3qnrbvpo5y2s" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 2.3.4.png" id="37_5hoxp"]
[ext_resource type="Texture2D" uid="uid://b4586jm8sbno6" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 2.3.5.png" id="38_7uoj6"]
[ext_resource type="Texture2D" uid="uid://bvkb7in7q0vi7" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 2.4.5.png" id="39_3bb4w"]
[ext_resource type="Texture2D" uid="uid://mkiux8lkpwk5" path="res://assets/RevolverLoadGifFin/threeBullets/Spot 3.4.5.png" id="40_tw2bb"]
[ext_resource type="Texture2D" uid="uid://dchvsnuwpryr" path="res://assets/RevolverLoadGifFin/fourBullets/Spot 0.1.2.4.png" id="41_o4krk"]
[ext_resource type="Texture2D" uid="uid://34eocw8av1ef" path="res://assets/RevolverLoadGifFin/fourBullets/Spot 0.1.2.5.png" id="42_8c7nn"]
[ext_resource type="Texture2D" uid="uid://dvvkppyxjukjx" path="res://assets/RevolverLoadGifFin/fourBullets/Spot 0.1.2.3.png" id="43_my87y"]
[ext_resource type="Texture2D" uid="uid://cwqdu0m8t8fjr" path="res://assets/RevolverLoadGifFin/fourBullets/Spot 0.1.3.4.png" id="43_s86g1"]
[ext_resource type="Texture2D" uid="uid://ck2fd107vnjqh" path="res://assets/RevolverLoadGifFin/fourBullets/Spot 0.1.3.5.png" id="44_32mf2"]
[ext_resource type="Texture2D" uid="uid://cwujsc7obu5k0" path="res://assets/RevolverLoadGifFin/fourBullets/Spot 0.1.4.5.png" id="45_mk8dd"]
[ext_resource type="Texture2D" uid="uid://b7ltjxugd7o8m" path="res://assets/RevolverLoadGifFin/fourBullets/Spot 0.2.3.4.png" id="46_335al"]
[ext_resource type="Texture2D" uid="uid://dfley6absxjxk" path="res://assets/RevolverLoadGifFin/fourBullets/Spot 0.2.3.5.png" id="47_kdcyf"]
[ext_resource type="Texture2D" uid="uid://ym8akk7vj1gy" path="res://assets/RevolverLoadGifFin/fourBullets/Spot 0.2.4.5.png" id="48_hpvvu"]
[ext_resource type="Texture2D" uid="uid://b4gfmggsmn2ko" path="res://assets/RevolverLoadGifFin/fourBullets/Spot 0.3.4.5.png" id="49_axtp4"]
[ext_resource type="Texture2D" uid="uid://wk4jueu3ycmu" path="res://assets/RevolverLoadGifFin/fourBullets/Spot 1.3.4.5.png" id="50_hb4ob"]
[ext_resource type="Texture2D" uid="uid://bf8at4eoqw42q" path="res://assets/RevolverLoadGifFin/fourBullets/Spot 2.3.4.5.png" id="51_vyo17"]
[ext_resource type="AudioStream" uid="uid://c664ssis44y7a" path="res://SoundEffects/load_sound_clipped.mp3" id="56_g0i20"]

[sub_resource type="Animation" id="Animation_olqd6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(596, 328)]
}

[sub_resource type="Animation" id="Animation_ho3as"]
resource_name = "expand"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.08571, 1.16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(596, 328), Vector2(596, 319), Vector2(596, 336), Vector2(596, 328)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w1j0d"]
_data = {
"RESET": SubResource("Animation_olqd6"),
"expand": SubResource("Animation_ho3as")
}

[sub_resource type="Animation" id="Animation_a62u0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0u8qx"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_takxq"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vqi5s"]
_data = {
"RESET": SubResource("Animation_a62u0"),
"fade_in": SubResource("Animation_0u8qx"),
"fade_out": SubResource("Animation_takxq")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4j0gb")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.2, 1.20446)
texture = ExtResource("2_porra")

[node name="zero_bullets" type="Sprite2D" parent="."]
position = Vector2(596, 328)
texture = ExtResource("2_41up6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="zero_bullets"]
libraries = {
"": SubResource("AnimationLibrary_w1j0d")
}

[node name="Spot 0" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("3_1lx88")

[node name="Spot 1" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("4_mwvqs")

[node name="Spot 2" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("5_ejjxp")

[node name="Spot 3" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("6_7lv8o")

[node name="Spot 4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("7_pleyi")

[node name="Spot 5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("8_cjc3g")

[node name="Spot 0_1" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("9_bwx7g")

[node name="Spot 0_2" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("9_te5nt")

[node name="Spot 0_3" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("10_71pre")

[node name="Spot 0_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("11_0pmfx")

[node name="Spot 0_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(600, 328)
texture = ExtResource("12_rwc0a")

[node name="Spot 1_2" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("13_34nge")

[node name="Spot 1_3" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("14_1bffo")

[node name="Spot 1_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("15_bi0w8")

[node name="Spot 1_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("16_3dmt7")

[node name="Spot 2_3" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("17_l2ul6")

[node name="Spot 2_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("18_5ksxr")

[node name="Spot 2_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("19_lk8sg")

[node name="Spot 3_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("20_8ga3c")

[node name="Spot 3_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("21_jfa02")

[node name="Spot 4_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("22_ett0u")

[node name="Spot 0_1_2" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("24_kh8f6")

[node name="Spot 0_1_3" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("23_mg1os")

[node name="Spot 0_1_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("24_2rx0w")

[node name="Spot 0_1_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("25_ag51e")

[node name="Spot 0_2_3" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("26_vwtep")

[node name="Spot 0_2_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("27_spri7")

[node name="Spot 0_2_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("28_lulr8")

[node name="Spot 0_3_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("29_dqtpo")

[node name="Spot 0_3_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)

[node name="Spot 0_4_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("30_107tn")

[node name="Spot 1_2_3" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("31_joti5")

[node name="Spot 1_2_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("32_gs17w")

[node name="Spot 1_2_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("33_5nev2")

[node name="Spot 1_3_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("34_31vxl")

[node name="Spot 1_3_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("35_g1cbd")

[node name="Spot 1_4_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("36_xksnd")

[node name="Spot 2_3_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("37_5hoxp")

[node name="Spot 2_3_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("38_7uoj6")

[node name="Spot 2_4_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("39_3bb4w")

[node name="Spot 3_4_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("40_tw2bb")

[node name="Spot 0_1_2_3" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("43_my87y")

[node name="Spot 0_1_2_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("41_o4krk")

[node name="Spot 0_1_2_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("42_8c7nn")

[node name="Spot 0_1_3_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("43_s86g1")

[node name="Spot 0_1_3_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("44_32mf2")

[node name="Spot 0_1_4_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("45_mk8dd")

[node name="Spot 0_2_3_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("46_335al")

[node name="Spot 0_2_3_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("47_kdcyf")

[node name="Spot 0_2_4_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("48_hpvvu")

[node name="Spot 0_3_4_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("49_axtp4")

[node name="Spot 1_3_4_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("50_hb4ob")

[node name="Spot 2_3_4_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 344)
texture = ExtResource("51_vyo17")

[node name="loadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("56_g0i20")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 1160.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="fadePlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_vqi5s")
}
